--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "mithril": "^2.2.14",
-    "select2": "^4.1.0-rc.0"
+    "mithril": "^2.2.14"
   }
 }
