--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "mithril": "^2.2.14"
+    "mithril": "^2.2.14",
+    "zod": "^3.24.2"
   }
 }
